; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_saa7146_hlp.c_calculate_output_format_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_saa7146_hlp.c_calculate_output_format_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saa7146_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.saa7146_dev*, i32, i32*)* @calculate_output_format_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @calculate_output_format_register(%struct.saa7146_dev* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.saa7146_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.saa7146_dev* %0, %struct.saa7146_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 65535
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 3840
  %12 = ashr i32 %11, 8
  %13 = shl i32 %12, 30
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, 15
  %16 = shl i32 %15, 24
  %17 = or i32 %13, %16
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 240
  %20 = ashr i32 %19, 4
  %21 = shl i32 %20, 16
  %22 = or i32 %17, %21
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %23, align 4
  %25 = or i32 %24, %22
  store i32 %25, i32* %23, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
